[package]
name = "SubsCrypt"
version = "3.0.0-rc2"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc2", default-features = false }
ink_metadata = { version = "3.0.0-rc2", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc2", default-features = false }
ink_storage = { version = "3.0.0-rc2", default-features = false }
ink_lang = { version = "3.0.0-rc2", default-features = false }
ink_prelude = { version ="3.0.0-rc2", default-features = false  }
scale = { package = "parity-scale-codec", version = "2.0", default-features = false, features = ["derive"] }
scale-info = { version = "0.5", default-features = false, features = ["derive"], optional = false }
#temp workaround because of problems in deps
funty = {version = "=1.1", default-features = false}
[lib]
name = "SubsCrypt"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]

[features]
default = ["std",]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info/std",
    "ink_prelude/std",
    #   "serde/std",
]
ink-as-dependency = []

#[profile.release]
#panic = "abort"           #<-- Panics shall be treated as aborts: reduces binary size
#lto = true                #<-- enable link-time-optimization: more efficient codegen
#opt-level = "z"           #<-- Optimize for small binary output
#overflow-checks = true
