[package]
name = "SubsCrypt"
version = "3.0.0-rc3"
authors = ["Saber Zafarpoor <szafarpoor@ce.sharif.edu>","Hadi Esna <esnaa@ce.sharif.edu>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc3", default-features = false }
ink_metadata = { version = "3.0.0-rc3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc3", default-features = false }
ink_storage = { version = "3.0.0-rc3", default-features = false }
ink_lang = { version = "3.0.0-rc3", default-features = false }
ink_prelude = { version ="3.0.0-rc3", default-features = false  }
scale = { package = "parity-scale-codec", version = "2.0", default-features = false, features = ["derive"] }
scale-info = { version = "0.6", default-features = false, features = ["derive"], optional = false }

# Should be removed once bitvecto-rs/bitvec#105 is resolved
funty = {version = "=1.1", default-features = false}

[lib]
name = "SubsCrypt"
path = "src/lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]
    
[features]
default = ["std",]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info/std",
    "ink_prelude/std",
    #   "serde/std",
]
ink-as-dependency = []
